# rust_cpp_bridge

./: .clang-format  .gitignore  Cargo.toml  build.rs  readme.md
cpp_src/: person.cpp
include/: person.hpp
libfoo/: CMakeLists.txt
person-lib/: CMakeLists.txt
person-lib/include/: person.hpp
person-lib/src/: person.cpp
src/: main.rs  person.cpp  person.hpp
