[package]
name = "demo"
authors = ["Oliver With"]
version = "0.1.0"
edition = "2021"

[dependencies]
# chrono = "0.4.39"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

# [lib]
# name = "person_bridge_rs"
# crate-type = ["staticlib"]

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
