[package]
name = "rust-cpp-integration"
authors = ["Oliver With"]
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.28.0"
cxx = "1.0"

[build-dependencies]
autocxx-build = "0.28.0"
miette = { version = "7.5.0", features = ["fancy"] }

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
